Styling. Scroll indicator no longer shows when body is too short to scroll. Added indicator for when no streams are live.

--- a/css/base.css
+++ b/css/base.css
@@ -229,7 +229,7 @@ padding-right: 7px;
   font-weight: 100;
   font-size: 1.2em;
   pointer-events: unset;
-  transform: rotate(180deg);
+  transform: rotate(180deg) translateZ(0px);
   cursor: pointer;
   margin: 0px;
   padding: 0px;
@@ -242,6 +242,7 @@ padding-right: 7px;
   will-change: transform; 
     -webkit-text-stroke: 0.3px var(--game-info-text-color);
   box-shadow: 0px 0px 30px var(--card-background-color),0px 0px 30px var(--card-background-color), 0px 0px 20px var(--card-background-color), 0px 0px 10px var(--card-background-color), 0px 0px 10px var(--card-background-color), 0px 0px 10px var(--card-background-color), 0px 0px 10px var(--card-background-color), 0px 0px 5px var(--card-background-color);
+  
 }
 
 
